--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile 'org.hibernate:hibernate-annotations:3.5.6-Final'
+    compile 'javassist:javassist:3.11.0.GA'
+
+    compile 'org.xerial:sqlite-jdbc:3.7.2'
+    compile 'org.slf4j:slf4j-log4j12:1.5.8'
+
+    compile 'commons-io:commons-io:2.4'
 }
 
 
